Prevent footer from overlapping game-id-input

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,4 @@
 .footer {
-    position: absolute;
-    bottom: 0;
     padding: 24px;
 }
 
@@ -15,7 +13,7 @@
 }
 
 .footer__github-icon {
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
     margin-right: 4px;
 }
